feat: Add exercise management functionality including new API routes, database schema, and mobile UI components.

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,6 @@ DATABASE_URL="file:./dev.db"
 JWT_SECRET="dev-secret-key-change-in-production"
 JWT_EXPIRES_IN="7d"
 JWT_REFRESH_EXPIRES_IN="30d"
+
+RAPIDAPI_KEY=f866011085msh391e885e62f67afp1c21d2jsn8f0882d74c73
+RAPIDAPI_HOST=exercisedb.p.rapidapi.com
