--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,8 @@ JWT_REFRESH_EXPIRES_IN="30d"
 
 # For SQLite (alternative):
 # DATABASE_URL="file:./dev.db"
+
+# ExerciseDB API (RapidAPI)
+RAPIDAPI_KEY="your-rapidapi-key"
+RAPIDAPI_HOST="exercisedb.p.rapidapi.com"
+
