--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "^2.2.0",
     "@tanstack/react-query": "^5.90.20",
     "expo": "~54.0.32",
+    "expo-av": "^16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-constants": "~18.0.13",
     "expo-device": "^8.0.10",
     "expo-file-system": "^19.0.21",
