--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,28 +1,55 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "Training",
+    "slug": "training-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "mobile",
-    "userInterfaceStyle": "automatic",
+    "scheme": "training-app",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0A0A0F"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.karan.training",
+      "infoPlist": {
+        "NSHealthShareUsageDescription": "Training uses HealthKit to display your steps, heart rate, and sleep data.",
+        "NSHealthUpdateUsageDescription": "Training uses HealthKit to log your completed workouts.",
+        "NSCameraUsageDescription": "Record progress videos to track your flexibility improvements.",
+        "NSPhotoLibraryUsageDescription": "Select photos or videos from your library to track progress.",
+        "NSMicrophoneUsageDescription": "Record audio with your progress videos."
+      },
+      "entitlements": {
+        "com.apple.developer.healthkit": true,
+        "com.apple.developer.healthkit.access": ["health-records"]
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#0A0A0F"
       },
+      "package": "com.karan.training",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "RECORD_AUDIO",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE",
+        "SCHEDULE_EXACT_ALARM",
+        "health.READ_STEPS",
+        "health.READ_HEART_RATE",
+        "health.READ_SLEEP",
+        "health.READ_WEIGHT",
+        "health.WRITE_EXERCISE"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -30,7 +57,23 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#6C5CE7"
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "Record progress videos to track your flexibility improvements.",
+          "photosPermission": "Select photos or videos from your library to track progress."
+        }
+      ],
+      "expo-secure-store",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
